2018-06-12  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Update word break dictionary.

	* data/tdict-common.txt:
	* data/tdict-district.txt:
	* data/tdict-ict.txt:
	* data/tdict-proper.txt:
	* data/tdict-spell.txt:
	  - Add words suggested by @nuttee15 in issue #2
	    https://github.com/tlwg/libthai/issues/2#issuecomment-396442354
	    https://github.com/tlwg/libthai/issues/2#issuecomment-396456551
	    Thank you very much!

2018-06-12  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Add 2 words from new RI dictionary.

	* data/tdict-std.txt:
	  - Add 'กายินทรีย์' and 'กาเยนทรีย์' from new RI dict.

2018-06-12  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Update word break dictionary.

	* data/tdict-city.txt:
	* data/tdict-common.txt:
	* data/tdict-district.txt:
	* data/tdict-geo.txt:
	* data/tdict-history.txt:
	* data/tdict-ict.txt:
	* data/tdict-lang-ethnic.txt:
	* data/tdict-proper.txt:
	* data/tdict-science.txt:
	* data/tdict-slang.txt:
	* data/tdict-spell.txt:
	  - Add words.

2018-05-31  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Add missing includes in header files.

	* include/thai/thwbrk.h:
	* include/thai/thwcoll.h:
	* include/thai/thwinp.h:
	* include/thai/thwrend.h:
	  - Add missing #include <thai/thwchar.h>

2018-01-08  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Move some entries in tdict-common to proper files.

	* data/Makefile.am, +data/tdict-slang.txt:
	  - Add file for keeping slangs.

	* data/tdict-common.txt:
	* data/tdict-ict.txt:
	* data/tdict-lang-ethnic.txt:
	* data/tdict-proper.txt:
	* data/tdict-science.txt:
	* data/tdict-slang.txt:
	* data/tdict-spell.txt:
	  - Move entries in tdict-common to more proper files.

2018-01-08  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Update word break dictionary.

	* data/tdict-common.txt:
	* data/tdict-country.txt:
	* data/tdict-district.txt:
	* data/tdict-ict.txt:
	* data/tdict-lang-ethnic.txt:
	* data/tdict-proper.txt:
	* data/tdict-science.txt: