@@ -35,18 +35,27 @@
 
 #define DICT_NAME   "thbrk"
 
+static char *
+full_path (const char *path, const char *name, const char *ext)
+{
+    int full_size = strlen (path) + strlen (name) + strlen (ext) + 2;
+    char *full_path_buff = (char *) malloc (full_size);
+    sprintf (full_path_buff, "%s/%s%s", path, name, ext);
+    return full_path_buff;
+}
+
 Trie *
 brk_load_default_dict ()
 {
     const char *dict_dir;
-    char        path[512];
     Trie *      dict_trie = NULL;
 
     /* Try LIBTHAI_DICTDIR env first */
     dict_dir = getenv ("LIBTHAI_DICTDIR");
     if (dict_dir) {
-        snprintf (path, sizeof path, "%s/%s.tri", dict_dir, DICT_NAME);
+        char *path = full_path (dict_dir, DICT_NAME, ".tri");
         dict_trie = trie_new_from_file (path);
+        free (path);
     }
 
     /* Then, fall back to default DICT_DIR macro */
