@@ -1,3 +1,13 @@
+2018-06-14  Theppitak Karoonboonyanan  <theppitak@gmail.com>
+
+	Avoid non-ANSI C snprintf()
+
+	* src/thbrk/brk-common.c (+full_path, brk_load_default_dict):
+	  - Instead of preparing full path name with snprintf(), which is
+	    non-ANSI, and still risks path name trimming, do it with
+	    size-calculated malloc().
+	  - free() it as needed.
+
 2018-06-12  Theppitak Karoonboonyanan  <theppitak@gmail.com>
 
 	Update word break dictionary.
